spacing fixes

--- a/portfolio2_style.css
+++ b/portfolio2_style.css
@@ -6,7 +6,7 @@
 @media screen and (max-width: 650px) {
 
   .initial-circle {
-    margin: 50px auto;
+    margin: 50px 0px;;
     width: 55px;
     height: 55px;
     line-height: 50px;
@@ -19,6 +19,7 @@
     font-family: 'Grand Hotel', cursive;
     margin-left: 15px;
   }
+
 
   .vl-large {
     border-left: 1px solid black;
@@ -74,11 +75,6 @@
     font-size: 3em;
   }
 
-  p, li, {
-    font-family: 'Poiret One', cursive;
-    font-size: 15px;
-  }
-
   #skills li, #skills p, #contact p {
     font-family: 'Poiret One', cursive;
     font-size: 15px;
@@ -103,6 +99,12 @@
     margin-left: 20%;
     position: absolute;
   }
+
+  p, li, {
+    font-family: 'Poiret One', cursive;
+    font-size: 15px;
+  }
+
 }
 
 
@@ -113,7 +115,7 @@
 @media screen and (min-width: 651px) {
 
   .initial-circle {
-    margin: 50px auto;
+    margin: 50px 0px;
     width: 55px;
     height: 55px;
     line-height: 50px;
@@ -126,16 +128,16 @@
     font-family: 'Grand Hotel', cursive;
   }
 
+  .nav-span {
+    margin-left: 800px;
+  }
+
   .vl-large {
     border-left: 1px solid black;
     height: 500px;
     margin-left: 15px;
     margin-top: -40px;
     display: inline-block;
-  }
-
-  .nav-span {
-    float: right;
   }
 
   .nav-headers {
@@ -186,11 +188,6 @@
     font-size: 4.5em;
   }
 
-  p, li {
-    font-family: 'Poiret One', cursive;
-    font-size: 20px;
-  }
-
   #skills li {
     font-family: 'Poiret One', cursive;
     font-size: 20px;
@@ -214,6 +211,11 @@
     margin-top: 10%;
     margin-left: 30%;
     position: absolute;
+  }
+
+  p, li {
+    font-family: 'Poiret One', cursive;
+    font-size: 20px;
   }
 }
 
